[package]
name = "openapi"
version = "1.0.0"
authors = ["support@higallop.com"]
description = "Data and insights APIs, webooks, and dashboards enabling businesses to launch tokenized products in seconds."
license = "UNLICENSED"
edition = "2018"

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
url = "^2.2"
uuid = { version = "^1.0", features = ["serde"] }
[dependencies.reqwest]
version = "^0.11"
features = ["json", "multipart"]
